[tool.poetry]
name = "python-threads"
version = "0.1.0"
description = ""
authors = ["Clearbloo <garwing88@gmail.com>"]
readme = "README.md"
packages = [{include = "python_threads", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
greenlet = "^3.0.3"
icecream = "^2.1.3"
gevent = "^24.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
